# flux-envelope

./: .gitignore  CHARTER.md  DOCKSIDE-EXAM.md  README.md  envelope.py  pyproject.toml
for-fleet/: health-check-2026-04-12_171750.json
src/flux_envelope/: __init__.py  coherence.py  concept_map.py  envelope.py  lingua_franca.py  vocabulary_bridge.py
tests/: test_coherence.py  test_concept_map.py  test_lingua_franca.py  test_vocabulary_bridge.py
